@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-31T01:08:23Z",
+  "timestamp" : "2022-07-31T16:14:34Z",
   "count_outdated" : 424,
   "uniques_outdated" : 229,
-  "count" : 449,
-  "uniques" : 241,
+  "count" : 450,
+  "uniques" : 242,
   "clones" : [
     {
       "timestamp": "2022-07-20T00:00:00Z",
@@ -79,6 +79,13 @@
       "timestamp": "2022-07-30T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-31T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
