@@ -1,5 +1,5 @@
 {
-  "count": 25,
+  "count": 26,
   "uniques": 2,
   "clones": [
     {
@@ -55,6 +55,11 @@
     {
       "timestamp": "2022-07-30T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-31T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
